style.css
body {
	background-color: #EC2F57;
	margin: 0;
}

nav {
	background-color: white;
	padding: 1em;
	padding-bottom: 0px;
	padding-top: 0px;
	display: flex;
	box-shadow: #2e2e2ed5 0px 0px 20px;
}

h1 {
	display: inline;
	padding-right: 33px;
	font-family: Ubuntu;
	font-size: 16pt;
}

h2 {
	color: white;
	font-size: 100pt;
	padding-left: 1em;
	margin-top: 0;
	font-family: "Lexend", sans-serif;
	font-weight: 500;
}

#sprit-can {
    position: fixed;
    left: 20%;
    top: 0%;
    width: 50px;
    height: 50px;
}

h4 {
	color: white;
	font-size: 20pt;
	padding-left: 7em;
	font-family: Ubuntu;
	line-height: 1.8em;
}

.Sprit_Logo {
	margin-left: 72%;
}

button {
	background-color: aliceblue;
	width: 15em;
	height: 17em;
	position: relative;
	left: 10em;
	font-size: 2em;
	line-height: 4em;
}


@font-face {
    font-family: Ubuntu;
    src: url(assets/Ubuntu-R.ttf);
  }

@font-face {
    font-family: Nova;
    src: url(assets/Fontspring-DEMO-proximanova-light.otf);
}

.juice {
	position: fixed;
	left: 0;
	top: 500px;
	width: 100%;
	height: 100%;
	opacity: 50%;
}

